--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "scripts": {
     "build": "tsc --project ./",
     "start": "node dist/app.js",
-    "test": "jest test/"
+    "test": "jest tests/"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/uuid": "^8.3.4",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   },
@@ -28,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "rxjs": "^7.5.5",
     "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "uuid": "^8.3.2"
   }
 }
